force-app/main/default/objects/Marketing_Experience__c/Marketing_Experience__c.object-meta.xml
<CustomObject>
    <label>Marketing Experience</label>
    <nameField>
        <label>Marketing Experience Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Marketing Experiences</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>