force-app/main/default/objects/Marketing_Experience__c/fields/CampaignID__c.field-meta.xml
<CustomField>
    <fullName>CampaignID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>CampaignID</label>
    <referenceTo>Campaign</referenceTo>
    <relationshipLabel>Marketing Experiences</relationshipLabel>
    <relationshipName>Marketing_Experiences</relationshipName>
    <type>Lookup</type>
</CustomField>