force-app/main/default/objects/Marketing_Experience__c/fields/JourneyId__c.field-meta.xml
<CustomField>
    <fullName>JourneyId__c</fullName>
    <label>JourneyId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>